--- a/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
+++ b/src/app/spotbie/ads/bottom-ad-banner/bottom-ad-banner.component.css
@@ -2,7 +2,7 @@
   position: relative;
   text-align: center;
   margin: 0 auto;
-  min-height: 600px;
+  max-height: 600px;
   background-repeat: no-repeat!important;
   background-size: contain!important;
   background-position: center!important;
@@ -17,22 +17,30 @@
 .spotbie-ad-wrapper-header.sb-mobileAdWrapper{
   position: relative;
   margin: 0 auto;
-  max-width: 600px;
-  min-width: 600px;
-  width: 600px;
-  right: 0%;
+  max-width: 400px;
+  min-width: 400px;
+  width: 400px;
   min-height: unset;
   height: unset;
+  max-height: 400px;
 }
 .sb-mobileAdWrapper .spotbie-ad-image{
   position: relative;
   left: 0;
   right: 0;
-  min-width: 100%;
-  width: 100%;
   max-width: 100%;
+  max-height: 370px;
   box-shadow: unset;
 }
+
+.spotbie-ad-image{
+  position: relative;
+  margin: 0 auto;
+  max-width: 100%;
+  max-height: 600px;
+  box-shadow: unset;
+}
+
 .sb-mobileAdWrapper .sb-categoryList{
   text-align: center;
 }
@@ -88,21 +96,7 @@
 .fa-map-marker-alt{
   font-size: .5rem;
 }
-.spotbie-ad-image{
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: 0;
-  min-height: 100%;
-  height: 100%;
-  max-height: 100%;
-  width: 100%;
-  max-width: 100%;
-  min-width: 100%;
-  background-repeat: no-repeat!important;
-  background-size: cover!important;
-  background-position: center!important;
-}
+
 .spotbie-white-iconImg{
   position: absolute;
   top: 0;
