--- a/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
+++ b/src/app/spotbie/spotbie-logged-in/ad-manager-menu/ad-creator/ad-creator.component.html
@@ -5,7 +5,7 @@
     <div #spbTopAnchor></div>
 
     <div class='sb-adCreatorWrapper'>
-        
+
         <p class="cursor-pointer"
             *ngIf="(ad !== null && ad !== undefined) && ad.is_live !== 1"
             style="font-size: .8rem;"
@@ -22,38 +22,31 @@
 
             <div class='spotbie-text-gradient text-uppercase text-center' #spbInputInfo></div>
 
-            <div *ngIf="adFormSubmitted && f.adType.errors else adTypeTemplate" 
+            <div *ngIf="adFormSubmitted && f.adType.errors else adTypeTemplate"
                   class="spotbie-input-info spotbie-text-gradient spotbie-error mt-4 mb-2">
-            
+
                 <div *ngIf="f.adType.errors.required">
                     You must pick a promotion type!
                 </div>
-                
-            </div> 
-            
-            <ng-template #adTypeTemplate>
 
+            </div>
+
+            <ng-template #adTypeTemplate>
                 <label class="spotbie-input-info spotbie-text-gradient mb-2">
                     Pick Promotion Type
-                </label>     
-
+                </label>
             </ng-template>
 
             <mat-form-field class="sb-input" style="padding-left: 0px;" appearance="fill">
-
                 <mat-label>Promotion Format</mat-label>
-                
+
                 <mat-select formControlName="adType" [(value)]="selected" (selectionChange)="adTypeChange()">
-
                   <mat-option *ngFor="let adType of adTypeList; let i = index;" [value]="i">{{ adType.name }}</mat-option>
-
                 </mat-select>
-                
             </mat-form-field>
 
-            <div *ngIf="adFormSubmitted && f.adName.errors else adNameNormalTemplate" 
+            <div *ngIf="adFormSubmitted && f.adName.errors else adNameNormalTemplate"
                     class="spotbie-input-info spotbie-text-gradient spotbie-error mt-2 mb-2">
-    
                 <div *ngIf="f.adName.errors.required">
                     Enter promotion name.
                 </div>
@@ -61,107 +54,89 @@
                 <div *ngIf="f.adName.errors.maxlength">
                     Maximum length - promotion name - 50
                 </div>
+            </div>
 
-            </div> 
-            
             <ng-template #adNameNormalTemplate>
-
                 <label class="spotbie-input-info spotbie-text-gradient mt-2 mb-2">
                     Promotion Name
-                </label>     
-
+                </label>
             </ng-template>
 
-            <input class="sb-input" 
+            <input class="sb-input"
                     (click)="$event.target.select()"
-                    formControlName="adName" 
+                    formControlName="adName"
                     type="text"
                     placeholder="My Ad"
-                    maxlength="50" /> 
+                    maxlength="50" />
 
             <input type="hidden" formControlName="adImage" />
-            
-            <input type="hidden" formControlName="adImageMobile" />
 
+            <input type="hidden" formControlName="adImageMobile" />
         </form>
 
-        <form>                    
-
-            <div *ngIf="adFormSubmitted && f.adImage.errors else adMediaUploadInfoTemplate" 
+        <form>
+            <div *ngIf="adFormSubmitted && f.adImage.errors else adMediaUploadInfoTemplate"
                     class="spotbie-input-info text-uppercase spotbie-text-gradient text-center spotbie-error mt-4 mb-2">
-
                 <div *ngIf="f.adImage.errors.required">
                     Upload Promotion Image
                 </div>
-                
-            </div> 
-            
-            <ng-template #adMediaUploadInfoTemplate>
+            </div>
 
-                <div class="spotbie-input-info text-uppercase spotbie-text-gradient text-center mt-4 mb-2 cursor-pointer" 
+            <ng-template #adMediaUploadInfoTemplate>
+                <div class="spotbie-input-info text-uppercase spotbie-text-gradient text-center mt-4 mb-2 cursor-pointer"
                     (click)="startAdMediaUploader('desktop')" #adMediaUploadInfo>
                     {{ adMediaMessage }} ({{ adTypeList[selected].dimensions }})
-                </div>     
-
+                </div>
             </ng-template>
 
-            <input type="file" 
-                    class='spotbie-background-upload-input' 
-                    #adMediaInput 
-                    (change)="uploadMedia(adMediaInput.files, 'desktop')" 
+            <input type="file"
+                    class='spotbie-background-upload-input'
+                    #adMediaInput
+                    (change)="uploadMedia(adMediaInput.files, 'desktop')"
                     accept="image/jpeg, image/gif, image/png"
                     multiple=false />
 
             <div (click)="startAdMediaUploader('desktop')" class='cursor-pointer mt-2 mb-2'>
                 <app-header-ad-banner #adApp class="pe-none" *ngIf="adType == 0" [ad]="ad" [business]="business" [editMode]="true"></app-header-ad-banner>
-                <app-nearby-featured-ad #adApp class="pe-none" *ngIf="adType == 1" [ad]="ad" [business]="business" [editMode]="true"></app-nearby-featured-ad>   
-                
+                <app-nearby-featured-ad #adApp class="pe-none" *ngIf="adType == 1" [ad]="ad" [business]="business" [editMode]="true"></app-nearby-featured-ad>
+
                 <div class='cursor-pointer mt-5 mb-2' *ngIf="adType == 2"></div>
-                <app-bottom-ad-banner #adApp class="pe-none" *ngIf="adType == 2" [ad]="ad" [business]="business" [editMode]="true"></app-bottom-ad-banner>                   
-            </div> 
+                <app-bottom-ad-banner #adApp class="pe-none" *ngIf="adType == 2" [ad]="ad" [business]="business" [editMode]="true"></app-bottom-ad-banner>
+            </div>
 
             <h6 class='sb-text-light-green-gradient' style="font-size: .8rem;">DESKTOP PREVIEW</h6>
-
         </form>
 
-        <form>                    
-
+        <form>
             <div *ngIf="adType !== 1">
-                <div *ngIf="adFormSubmitted && f.adImage.errors else adMediaMobileUploadInfoTemplate" 
+                <div *ngIf="adFormSubmitted && f.adImage.errors else adMediaMobileUploadInfoTemplate"
                     class="spotbie-input-info text-uppercase spotbie-text-gradient text-center spotbie-error mt-5 mb-2">
-
                     <div *ngIf="f.adImage.errors.required">
                         Upload Promotion Image
                     </div>
-                    
-                </div> 
-                
-                <ng-template #adMediaMobileUploadInfoTemplate>
+                </div>
 
-                    <div class="spotbie-input-info text-uppercase spotbie-text-gradient text-center mt-5 mb-2 cursor-pointer" 
+                <ng-template #adMediaMobileUploadInfoTemplate>
+                    <div class="spotbie-input-info text-uppercase spotbie-text-gradient text-center mt-5 mb-2 cursor-pointer"
                         (click)="startAdMediaUploader('mobile')" #adMediaUploadInfo>
                         {{ adMediaMessage }} - MOBILE - ({{ adTypeList[selected].dimensionsMobile }})
-                    </div>     
-
+                    </div>
                 </ng-template>
             </div>
 
-            <input type="file" 
-                    class='spotbie-background-upload-input' 
-                    #adMediaMobileInput 
-                    (change)="uploadMedia(adMediaMobileInput.files, 'mobile')" 
+            <input type="file"
+                    class='spotbie-background-upload-input'
+                    #adMediaMobileInput
+                    (change)="uploadMedia(adMediaMobileInput.files, 'mobile')"
                     accept="image/jpeg, image/gif, image/png"
                     multiple=false />
 
-            <div (click)="startAdMediaUploader('mobile')" class='cursor-pointer mt-3 mb-2'>
-
+            <div (click)="startAdMediaUploader('mobile')" class='spotbie-mobile-ad cursor-pointer mt-3 mb-2'>
                 <app-header-ad-banner #adAppMobile class="pe-none" *ngIf="adType == 0" [ad]="ad" [business]="business" [editMode]="true" [isMobile]="true"></app-header-ad-banner>
                 <app-bottom-ad-banner #adAppMobile class="pe-none" *ngIf="adType == 2" [ad]="ad" [business]="business" [editMode]="true" [isMobile]="true"></app-bottom-ad-banner>
-            
-            </div> 
+            </div>
 
             <h6 class='sb-text-light-green-gradient' style="font-size: .8rem;" *ngIf="adType !== 1">MOBILE PREVIEW</h6>
-
         </form>
 
         <p class="mt-4" style="font-size: .8rem;">
@@ -181,15 +156,11 @@
         <div class='mt-5 mb-5 cursor-pointer' (click)="closeThis()">
             <span class="spotbie-text-gradient">CANCEL</span>
         </div>
-
     </div>
-
 </div>
 
 <div class='spotbie-overlay-window' *ngIf="adCreated">
-
     <div class='sb-v-wrapper' style="display: grid; align-content: center;">
-        
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">UPLOAD SUCCESSFUL</h4>
 
         <div class="sb-verificationCheck sb-text-light-green-gradient mt-4 mb-4">
@@ -197,15 +168,11 @@
         </div>
 
         <h4 class="spotbie-text-gradient spotbie-r-success-title text-uppercase">PAYMENT PENDING</h4>
-
     </div>
-
 </div>
 
 <div class='spotbie-overlay-window' *ngIf="adDeleted">
-
     <div class='sb-v-wrapper' style="display: grid; align-content: center;">
-        
         <h4 class="spotbie-text-gradient text-uppercase">AD WAS DELETED</h4>
 
         <div class="sb-verificationCheck sb-text-light-green-gradient mt-4 mb-4">
@@ -213,7 +180,5 @@
         </div>
 
         <h4 class="spotbie-text-gradient text-uppercase">CONTINUE</h4>
-
     </div>
-
 </div>
